baumstamm-lib/src/snapshots/baumstamm_lib__graph__test__cycles-2.snap
---
source: baumstamm-lib/src/graph.rs
expression: gens
---
[
    [
        0,
    ],
    [
        4,
    ],
    [
        5,
    ],
    [
        6,
        1,
    ],
    [
        7,
        2,
    ],
    [
        9,
        3,
    ],
    [
        10,
        8,
    ],
    [
        11,
    ],
]
