baumstamm-lib/src/snapshots/baumstamm_lib__graph__test__cycles-3.snap
---
source: baumstamm-lib/src/graph.rs
expression: person_layers
---
[
    [
        0,
        1,
    ],
    [
        5,
    ],
    [
        6,
        0,
    ],
    [
        7,
        2,
    ],
    [
        8,
        C,
        3,
    ],
    [
        A,
        4,
        8,
    ],
    [
        B,
        9,
    ],
]
