baumstamm-lib/src/snapshots/baumstamm_lib__graph__test__display_no_retain-2.snap
---
source: baumstamm-lib/src/graph.rs
expression: display
---
Ok(
    DisplayGraph(
        Graph {
            sources: [
                0,
                1,
                7,
                8,
            ],
            nodes: [
                Node {
                    value: 0,
                    children: [
                        2,
                    ],
                },
                Node {
                    value: 1,
                    children: [
                        2,
                    ],
                },
                Node {
                    value: 2,
                    children: [
                        3,
                        4,
                        5,
                    ],
                },
                Node {
                    value: 3,
                    children: [],
                },
                Node {
                    value: 4,
                    children: [],
                },
                Node {
                    value: 5,
                    children: [],
                },
                Node {
                    value: 7,
                    children: [
                        4,
                    ],
                },
                Node {
                    value: 8,
                    children: [
                        5,
                    ],
                },
            ],
        },
    ),
)
