baumstamm-lib/src/snapshots/baumstamm_lib__graph__test__double_inheritance-2.snap
---
source: baumstamm-lib/src/graph.rs
expression: layers
---
[
    [
        0,
        7,
        1,
    ],
    [
        3,
        2,
        4,
        5,
        6,
    ],
    [
        8,
    ],
]
