baumstamm-lib/src/snapshots/baumstamm_lib__graph__test__double_inheritance-3.snap
---
source: baumstamm-lib/src/graph.rs
expression: person_layers
---
[
    [
        0,
        1,
        2,
    ],
    [
        3,
        6,
        4,
        5,
        1,
    ],
    [
        7,
    ],
]
