baumstamm-lib/src/snapshots/baumstamm_lib__graph__test__double_inheritance.snap
---
source: baumstamm-lib/src/graph.rs
expression: cut_graph
---
CutGraph(
    Graph {
        sources: [
            0,
            7,
            1,
        ],
        nodes: [
            Node {
                value: 0,
                children: [
                    2,
                    3,
                ],
            },
            Node {
                value: 1,
                children: [
                    4,
                    5,
                    6,
                ],
            },
            Node {
                value: 2,
                children: [
                    8,
                ],
            },
            Node {
                value: 3,
                children: [],
            },
            Node {
                value: 4,
                children: [],
            },
            Node {
                value: 5,
                children: [],
            },
            Node {
                value: 6,
                children: [],
            },
            Node {
                value: 7,
                children: [
                    2,
                    4,
                ],
            },
            Node {
                value: 8,
                children: [],
            },
        ],
    },
)
