baumstamm-lib/src/snapshots/baumstamm_lib__graph__test__double_inheritance_and_xs-3.snap
---
source: baumstamm-lib/src/graph.rs
expression: person_layers
---
[
    [
        0,
        1,
        2,
    ],
    [
        3,
        4,
        5,
        6,
        1,
    ],
    [
        7,
    ],
]
